Fix overflow in reflections page, caused by the x-rotation class

--- a/src/app/reflections/reflections.component.css
+++ b/src/app/reflections/reflections.component.css
@@ -1,7 +1,3 @@
-.row {
-  overflow: hidden;
-}
-
 .my-card {
     border: solid 2px var(--highlight-secondary-color);
     padding: 1rem;
@@ -12,7 +8,7 @@
     transition: transform 0.5s ease-in-out;
     z-index: 0;
     position: relative;
-    margin-top: 4rem;
+    margin-top: 2rem;
   }
 
   .fa-solid {
@@ -33,7 +29,7 @@
  
   /* Rotation effect by default */
   .x-rotate {
-    transform: perspective(700px) rotateX(45deg);
+    transform: perspective(850px) rotateX(45deg);
     /* box-shadow: rgba(244, 3, 91, 0.305) 0px 8px 16px; */
   }
 
